Lessen navigation links so it can be handled
This is due to making this html elements be simple and easy to manage
instead of overly many navigation links at the same time.

--- a/src/index.html
+++ b/src/index.html
@@ -11,36 +11,21 @@
         <nav class="menu_items">
           <ul class="unordered_links">
             <li class="contain_link">
-              <a href="" data-menu-link="1">Clothing</a>
+              <a href="" data-menu-link="1">Home</a>
             </li>
             <li class="contain_link">
-              <a href="" data-menu-link="2">Shoes</a>
+              <a href="" data-menu-link="2">About</a>
             </li>
             <li class="contain_link">
-              <a href="" data-menu-link="3">Accessories</a>
+              <a href="" data-menu-link="3">Design</a>
             </li>
             <li class="contain_link">
-              <a href="" data-menu-link="4">Baby</a>
+              <a href="" data-menu-link="4">Services</a>
             </li>
             <li class="contain_link">
-              <a href="" data-menu-link="5">Electronics</a>
+              <a href="" data-menu-link="5">Contact</a>
             </li>
-            <li class="contain_link">
-              <a href="" data-menu-link="6">Sports</a>
-            </li>
-            <li class="contain_link">
-              <a href="" data-menu-link="7">Garden</a>
-            </li>
-            <li class="contain_link">
-              <a href="" data-menu-link="8">Computers</a>
-            </li>
-            <li class="contain_link">
-              <a href="" data-menu-link="9">Home & Kitchen</a>
-            </li>
-            <li class="contain_link">
-              <a href="" data-menu-link="10">Video Games</a>
-            </li>
-            <li class="more_links contain_link">
+            <li class="more_links">
               <a data-more-menu-link="1">More ...</a>
             </li>
           </ul>
