Add attributes to last link li and it's a elements

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
             <li class="contain_link">
               <a href="" data-menu-link="5">Contact</a>
             </li>
-            <li class="more_links">
-              <a data-more-menu-link="1">More ...</a>
+            <li class="contain_link more_links">
+              <a data-menu-link="6" data-more-menu-link="1">More ...</a>
             </li>
           </ul>
         </nav>
