Move the close div outside the more menus

--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,10 @@
           </ul>
         </nav>
         <div id="more_links_inside" data-more-link-inside="1">
-          <ul class="more_unordered_links">
-            <li class="close_toggler">
-              <div>Close</div>
-            </li>
-          </ul>
+          <div class="close_toggler">
+            <div>Close</div>
+          </div>
+          <ul class="more_unordered_links"></ul>
         </div>
       </header>
     </div>
